Update package and manifest descriptions

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
+	"id": "inoreader-highlights-obsidian-importer",
+	"name": "InoReader Highlights Importer For Obsidian",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"description": "InoReader highlight importer for Obsidian.",
+	"author": "Grant Willcox",
+	"authorUrl": "https://tekwizz123.github.io",
 	"isDesktopOnly": false
 }
