--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Grant Willcox (tekwizz123)",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
